@@ -1,16 +1,34 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST glance-client-3.0.1.jar 18291 SHA256 3dd831e8d94dd13a22388d2d2a80a7046c2e4f42b79c0cd04a753d96faaaf897 SHA512 dbb431457bb59f75e31630a772a6658c12ed6a26fa84b7d830b544c7cc0487376f40a9d364dc34729523275af9d84389f6df824c1ecdf2b4b2dd4728113dcada WHIRLPOOL f99beafbe1e6b8f9d68a8179d71f61ef68022b7c77b2adc6ebcdd2fcfab4def004ca556aba4a3924ad4313df6650afc7280b47821c36e79a6e278fea3f585897
 DIST glance-client-3.0.2.jar 18291 SHA256 21d65cc3fade4b05704f5636cb1dc2735430d4b525fbadc040fb87a7e35fb875 SHA512 c3a9a466e40e43205191b19cb1dc53278e5ee81929490fa6ba77329bcc4bda2b190ac99f52b0274739c03f02a17699d0963b74881d344369267d4722498df32d WHIRLPOOL 018b61b61a1a69f52cabaec9cab7dbab40f6ec394745c11c866b1791df0c6de56934ae12ceb9eb1e8a43d2f6e518d734e0a6c109b517aee4ad2057c469211b6f
+DIST glance-client-3.0.4.jar 18301 SHA256 bcd2eb34ae4c160cc45beba6258bde1ccae5a2e5ca7d82e9c5cd30232c7ba93b SHA512 f9c987f1237f647efbcd8851cff64c03c4b837d8a63275a4a211eb8629a64e945c97aac348746084502d661e3d32ece8f74e1e58f1dc2e95b8654e4faa95ed61 WHIRLPOOL 5d7fdfee51d219f1bb3e6b8fe7edb4a605ebd4ce9aaa01e165017437e99f2accef2820fcaca7f618cc71b3399ba9c88e51e2f2d7d30814917b21aac6af30f11f
 DIST glance-model-3.0.1.jar 8663 SHA256 62ad0cb72f8b963db340277cd195405fdaf3bb6c701851db7f608833e567f033 SHA512 320df3e7131458d57310bffc587b2238e19eefeb912fef1c1d78d3e82e570a9f706dd6711af01f019fcc1a4efe6d9f98a6b7a5402de599bd09e7041b099ef6e2 WHIRLPOOL 9fd33bd1200f73d9e79b75c821bcba7d3024e29858605da54715270894e34d5abded7d4b42066781e7ae144ae663b1c24b2214558b57963ae5e574ace679757e
 DIST glance-model-3.0.2.jar 8663 SHA256 92ef5d7f001a94adef45d0ced2b15330ed44c3efc8fa58c1f616f7926cdbbd17 SHA512 ff87698185708e269f6d006724d3b3a6944f1a4f4ddfdfe8e6cc68044b2ef9c4a41574b7c2d81514b87bb67629daf072ad380c944d0356f475f4aa773d6af767 WHIRLPOOL c83c516af4c5f8357458aabb1f9a8ae5e753a856b8b80288194a3db344ade7a0a94b4ca5fa734cd655c03d282dd79a3e5ac0e68a78c58eaa0811a0e9d6fbbef0
+DIST glance-model-3.0.4.jar 8782 SHA256 a1b6423382db982d78039bdb8b16330156fa0ae0c0a7669c12721915fdf937ed SHA512 721913bbdc4fee8743f8c16ff9c9022defca6f86efdbaaf15ed13a466e70ac9faabec95d48adc97774eecf94542eba3ce0454f6e1dd912e581287531115ceae2 WHIRLPOOL 69bb767d062831a048b0ae85b7ab5293b233e7c7c30fc7f7b286f1e06055ed4141eff5e0a972489cd7395c24d3e217a29ed430ac03a1ea18a63fa9b41c76d616
 DIST keystone-client-3.0.1.jar 34713 SHA256 e1b54c82709e5a4a7b14ff846e6f1d6dfb27eeb7b3348da47b6749ff91b3a278 SHA512 ed5a93d8e3305f4309cbb2a5a63e8175d70a809f9b73ef80fd8252284cbc8b2473223c3f797eb21335720e97d77aac8fe129bfb54bf9ae6547c22ae903388003 WHIRLPOOL 8586a96c0e1e9e94a8bb4ab53e85fc47c1eb4b8374950621eeedf7af5eb24acb7bc94058a8b77be7a06b769b25dd41522ad733f878a9ecd647b4e7f16c3320b6
 DIST keystone-client-3.0.2.jar 34712 SHA256 b74fc08fc4a8f78bdf0ce7ab95e92af42e0f957700ebc6731723bcbe6099d70e SHA512 1e15ad9f82929f2243c0709f4dc462a59a52a390cdb85b4793e1d8ae50ae0c2d99ae498f6fb70ab800f083d7991940672af97552a9f65e0ee1751be59bcb8385 WHIRLPOOL 194fa42c176fb2898abaad2f7d9963eb75c856dcf13c1597189c2639bf90ee73dae1c760f50f79afba907c53dac4e81293bad7a9bc59a4d40f34595cacf70c4b
+DIST keystone-client-3.0.4.jar 34722 SHA256 389f15be0b41e5b111a96abf06e2f35a4f50bf197a183a1dd51213a08033e8fe SHA512 53932b4226918b2728715487cc2d8dc4b54044a4c55b8a79f5c52fa55170d32363154ac0237b63abf4967203d6e2b7608582d142272870c9ced1e16d24b9cfc5 WHIRLPOOL 6724ed65a402640ce0fdcca9319883b52fde0b4d294afe8396af83037c64d9ffbe74e9acfe3bf0a9e9aafbb16df613ca9c9da78651e69e5ead2361ad62b7efe3
 DIST keystone-model-3.0.1.jar 23096 SHA256 e4f63b6032e8ed8db6a4a37ecdf8e7ff01560b726b9e7b8873bb688f283e1351 SHA512 0cd5d05e3f84f2fffba356db644265fe1a3319a0e3a1ecb24b1edb708f35b5929ed3245e73de6d88060b39200d9817b154143260130fa74e355713618d537be9 WHIRLPOOL 8d60a007a8733efeb156daab73df267f29ea7b8bd31249a354ba3648949d2646f3ffb38b7c2140ecd8ac48872fd27824ddde082789312041c314495d0b20a487
 DIST keystone-model-3.0.2.jar 23095 SHA256 062a5918ec72993e295093c557a3ca3ef9dd35e1f946c3a733528949f2e827f0 SHA512 b5948dc052421257106ba1757bc06f0aa6abe65d25b9e723fca3310fa09b653b3e4683876bb6672c0e634071563d709623f227fc83d4f4c73a64d367f4412435 WHIRLPOOL ef9e37a487e64fab6ca00cabc3bd02afd2934837fd50f9141077ee37b86fb0dee84e10595e164545898f60abc8b49a64486121ca119fa87e8718cf12bbf4c146
+DIST keystone-model-3.0.4.jar 23105 SHA256 115ea6c540614cec8b223eddaa3f275e572fdba5fe5a5a7b37a667e920120d95 SHA512 defc7604fd77c68a3c0e7a00046a5ef40af216d247862223575b61e3b4c89e2da361b527203704575715f55ccbf203902e52518e1c881336a34495ab0d71e0fa WHIRLPOOL 56b3804aaaa665ff3ba82fa2bb0c398f539ec7cfc0a1ff9059b7be35a773d2a0bd6e16c8eb4299b078374f6cc3117982ef5933907a69be5253b25a289ef0e966
 DIST openstack-client-3.0.1.jar 10869 SHA256 95b5e12627557b2f4fb0279d7020311875b2f5330dc040269f44ff14619f5cd5 SHA512 e9311339ea35c47188354fde4a7a18b40ffc066503cc74f2e222239b29d42dbbd8680f39fd09814f45bf6cb22e27f53e5dda98f22ff87df43b707cac84333155 WHIRLPOOL 2039d5ba77a3d9bea87ff791f26f2020173b7dd8b2f157a37a7f4d31844c9a028747ae8e92c93dc47999b4fe6eb6113152e17a7c99b080fc67bb7b04fbfea63e
 DIST openstack-client-3.0.2.jar 10868 SHA256 0765e7c3bf12731a377d83ae57a238faa30da58136762b2bde2e7ea40c99d458 SHA512 a2f4ca5c3a11e66cffd94686799d78909633f6698275b989772ddf4ccdf8908f99007687a240d56391dc597e686f4552243ea5ec2ebd56ea3d05e1ce3bf1880d WHIRLPOOL 2cf30ba00e8686c3230ad7d2b54abb7c8c3758b46c4383648c6fb766a50d5a701e5bf52cab09877ec49f0c52bbf763e61112961f7622f1e0864f46590f8eda59
+DIST openstack-client-3.0.4.jar 10878 SHA256 8345ee7191077834594f093b60d30dac07e8f608d377aefcbcf1508f8e5edb1c SHA512 ea57143641278b72095d99ccb559455ee7a432b8a5938a86ebcc6fcfa9d4405c32b45fb8626ab79e8da9e7f6dc6c4f8138642fd7ba1d817b895a659ba6964222 WHIRLPOOL 95523cb1cc1a01418d4c795ef42a85f0fd8353b35ae163853b15e08ae31a6f1bb3ab89bd88ea8f3c8a4435e358283f3cd535171d21f4862a51a27b2d72456cd6
 DIST quantum-client-3.0.1.jar 17576 SHA256 da8d03940ae6723ad1847c2d7c3fc9ec6a8e7886982917b8bcc8aef5f6de3acf SHA512 a8e21e1aaad4213ed62a0b6de385698152cbb530ab3deab833d26cf0b8f1dd1addecc7e9d6db22ed7c8f766eca616130978b72c78978c48a0eebacd1fbbeeab7 WHIRLPOOL aca7d54f51eb12b22f7a821212e3ab5a1736b408dbf4cc7d852dfad8d8d822b3f42ce10c7367a32f93296ea096c900d512452fbe1222ed1a5f853efa32717ac0
 DIST quantum-client-3.0.2.jar 18414 SHA256 7d1d8eb281e5327d700452dc49a3267b893f734b24e597ab79a2fdf8b567badf SHA512 db0313c765eb6b60cf2c0abfc8f498831c5911ba4f4c63d4f60445d9c4cee5cf9ce04afde9ad5bbff71a76d54571ad131d383b3e5319a66f69dfe24b46200080 WHIRLPOOL 24f1a97056d9b909da991f39531bb076f76bac1fa808c8fa0074e0f2317b717e78ef9160fc9f5f8efebca5226a4a177f87878a952bcc2fef11fac38e49b94958
+DIST quantum-client-3.0.4.jar 20101 SHA256 44e6aa885d8e48301fa993bc2cb9ac34bfc55e9c1d150b11b2c51c3f60612212 SHA512 96e46cb449018dcd348a2368848f607a2a47303ff3cea9f7d48bac0d30472244537f6ee39a948d1ceb9210b6ebfad541e0014b6e9697c2cb070c2e7e483180cf WHIRLPOOL 03730c7672543feead53cb43efaa5fb87a43788742825ded1955461676e2d0bbdcf15f546474e3c35ff58383a647d72b10f4a048d53642315beca9c5bbf0b420
 DIST quantum-model-3.0.1.jar 15208 SHA256 71f60aae24714196039624d9340f3027347b3239a0cff0d4af2ec5138905a280 SHA512 d8e9712b7ef3e4c8e931a2fbbc5996375fa61e725e84844a94e8957b3b54efabee64c7f3e9714279caeade4a1d0bfd8ab4ea7e9486f6ad6c5a2bb53b5ce8e0e4 WHIRLPOOL 668eb3ad340b64e2431723ed683146bb3ad3b70a62008589d77bd0da22dd241d3f671334f987787b290c4ab98b102030730992356f4e9f99fe22d94b6d53d1e8
 DIST quantum-model-3.0.2.jar 14956 SHA256 1ee2e8430f425a2b459d21fb3da3adf8f344e438ca5b007140b7fc98909267a9 SHA512 13748bb372ad8855d63006b1180858da578eed6a475d3f68a0dfc7bd21e5af76ef06a56850787f67abd7c662a28563779a6a9c5e1a15da23b76b150d1ec300b2 WHIRLPOOL 76f4ccb82dc8e12b346bdbdc633b1600959a90827d02bd5d3ed8f2265060b4131d1dbb862fa1e5c27f7a64307ed20e3772da4cc4430b87baaf21427b31c46bd5
+DIST quantum-model-3.0.4.jar 14796 SHA256 6cf5f09019f056bdfe3fe5830f0db2cae0fc990f8ae129b48408a4eae667eefb SHA512 f4405386f05ddd7bea0c9f787361cf8bf4837cfc62cd7a68111914b6edf4ccb2f89e636f330e87496c86d400f5aa1648b54c64c63358a6edaa8c4ea0ec788a7e WHIRLPOOL c49b9eb3b7a676a9e827dda8fe4e2f161949ca24556c11def7af1baa863b42a6d71ef20141c8ba998502e4243fd325cee8a433649ff3f974a2f583040cc22859
 DIST resteasy-connector-3.0.1.jar 8868 SHA256 4e55ac2534ef8d4da747609161bbe70d62653f1b28c39f784a0f8ffd4a4b4bd7 SHA512 2639458ed74066573d467f8142f05b390ae6960400e750b558e93bf4ce624e37a780513a0b78b2f3b43906458e36b584b73243b006695f069bf61359e435c916 WHIRLPOOL 8d1c37376c8601f9917042f8fbe0b2737d74739a23d4bcee55fc8f643d8d587142ab30703cfba50eb8196324fb99c2b53e4964252d0ecf7db492d711f6794959
 DIST resteasy-connector-3.0.2.jar 8912 SHA256 941fbed175853e8ccc0561529430ffae1d2d9aa2945f30a19803b041ebade7bf SHA512 7062d7957f9d2de0fdc884c3bbfaad62c50748d447a0b783767cf8266ba83e52e7a8036b95b8304ea7beadb6bf30f5dc8a3169f46f1b4501b9bfa7bd7c5650b5 WHIRLPOOL d7a1a05500ad475bb71c929a4c9cab2b12dac8cfc9312bf4228d51d8e14a596fc02ecb8d9a2ed60fc25ec9f107999c049acef89ddbcc6649ccee82342d94727e
+DIST resteasy-connector-3.0.4.jar 8922 SHA256 7664ac7a4e2e8293af590eab0ceb189d8697eebb2910b417316a76555f710685 SHA512 fb53ed80e2e8db290962e98023275e70be034c9c1b58d56d19c69ffc316210b54efd899ca0b9d94b7f7d0f79758c5cc9ec3eadcfb5c48aa2584106ca908a5a18 WHIRLPOOL 9aefe86bed9e0aa633c6fcea91b1a5958fd0c893b1c138bed51c87096b665f80f5b5aa03e143d429e4f0804bef724442b64d4b2f19749283634eb037bc69372b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlNmjwcACgkQXYk9GL8g3FGmdwD+NgZpaUE36/fCzP/knPQLRGCI
+3hH/Qtr+EQVmlB+zap0A+QERWantkFqCz37XNLwfBYycz4bVhHiR/3SHorm/wBC2
+=jWay
+-----END PGP SIGNATURE-----
