@@ -1,3 +1,9 @@
+*openstack-java-sdk-bin-3.0.4 (04 May 2014)
+
+  04 May 2014; Alon Bar-Lev <alonbl@gentoo.org>
+  +openstack-java-sdk-bin-3.0.4.ebuild:
+  Version bump
+
 *openstack-java-sdk-bin-3.0.2 (28 Jan 2014)
 
   28 Jan 2014; Alon Bar-Lev <alonbl@redhat.com>
